k8s/api-gateway/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: api-gateway
  annotations:
    kube-score/ignore: pod-networkpolicy,networkpolicy-targets-pod
  labels:
    app: api-gateway
    role: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
      role: api-gateway
  template:
    metadata:
      annotations:
        kube-score/ignore: pod-networkpolicy,networkpolicy-targets-pod
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
      labels:
        app: api-gateway
        role: api-gateway
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        fsGroup: 2000
      containers:
      - name: api-gateway
        image: lstmcacheevictionpolicy.azurecr.io/api-gateway:PLACEHOLDER_SHA
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          exec:
            command:
              - sh
              - -c
              - "echo ready"
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
              - sh
              - -c
              - "echo ok"
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: api-gateway-secrets
          mountPath: /etc/secrets
          readOnly: true
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
          runAsGroup: 10001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "100Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            ephemeral-storage: "500Mi"
      volumes:
      - name: api-gateway-secrets
        secret:
          secretName: api-gateway-secrets
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: api-gateway
spec:
  selector:
    app: api-gateway
    role: api-gateway
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
