k8s/api-gateway/api-gateway-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-policy
  namespace: api-gateway
  annotations:
    kube-score/ignore: pod-networkpolicy,networkpolicy-targets-pod
spec:
  podSelector:
    matchLabels:
      app: api-gateway
      role: api-gateway
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
